log
Thu Mar 26 07:01:31 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
89cfee6
Thu Mar 26 07:06:23 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
d1fa4a7
Thu Mar 26 07:07:41 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
78f2c31
Thu Mar 26 07:08:32 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
07b1547
Thu Mar 26 07:15:17 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
aafec36
Thu Mar 26 07:15:29 PM UTC 2026: 
 tests:  0|0
4fc9ede
Thu Mar 26 07:17:14 PM UTC 2026: 
 tests:  0|0
02816b3
Thu Mar 26 07:18:26 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
977266f
Thu Mar 26 07:21:02 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e9398a2
Thu Mar 26 07:23:06 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
725cab9
Thu Mar 26 07:29:00 PM UTC 2026: 
 list.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:94:12: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   94 |         if(current->next!=NULL) {
      |            ^~~~~~~
      |            popCurrent
list.c:94:12: note: each undeclared identifier is reported only once for each function it appears in
e86646f
Thu Mar 26 07:29:30 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
0d5208d
Thu Mar 26 07:36:52 PM UTC 2026: 
 list.c | 24 +++++++++++++-----------
 1 file changed, 13 insertions(+), 11 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
a0073a3
Thu Mar 26 07:49:30 PM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
49845de
Thu Mar 26 07:56:13 PM UTC 2026: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
7eb44d3
Thu Mar 26 07:58:19 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 20/60
ea00d78
Thu Mar 26 08:01:47 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 20/60
e479737
Thu Mar 26 08:02:41 PM UTC 2026: 
 tests:  2|4
total_score: 20/60
0482194
Thu Mar 26 08:04:34 PM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
55ba53f
Thu Mar 26 08:05:31 PM UTC 2026: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 20/60
c466a2c
